# meta-prompt-mcp

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
benchmarks/: benchmark.py  results.md
src/meta_prompt_mcp/: __init__.py  __main__.py  index_manager.py  server.py
src/meta_prompt_mcp/data/: anthropic_prompting_guide.md  google_prompting_guide.md
src/meta_prompt_mcp/storage/: default__vector_store.json  docstore.json  index_store.json
storage/: default__vector_store.json  docstore.json  index_store.json
