[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-prompt-mcp"
version = "1.0.5"
description = "An MCP server that acts as a Prompting Oracle — advice from official Prompting Guides."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Kapil Lamba" }]
keywords = ["mcp", "prompting", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[project.scripts]
meta-prompt-mcp = "meta_prompt_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_prompt_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
